--- a/main.html
+++ b/main.html
@@ -1,1 +1,24 @@
-<h1>OOOOOOOOOOOOi</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Loja maluca</title>
+<link rel="stylesheet" href="css/main.css"/>
+<script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
+<script src="js/new.js"></script>
+</head>
+    <html>
+        <body>
+            <header>
+                <lord-icon
+                    src="https://cdn.lordicon.com/dnoiydox.json"
+                    trigger="hover"
+                    colors="primary:#3080e8,secondary:#4030e8"
+                    style="width:5rem;height:5rem">
+                </lord-icon><h1>Shoping.com</h1>
+                <div id="menu" onclick="openSideBar()"><div class="hamburguer"></div> <div class="hamburguer"></div> <div class="hamburguer"></div> </div>
+                <nav id="sideBar"><p onclick="closeSideBar()">X</p><a href="#">Home</a> <a href="#">Produtos</a> <a href="#">Novidades</a> <a href="#">Suporte</a></nav>
+            </header>
+        </body>
+    </html>
