--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Loja maluca</title>
+<title>Shoping.com</title>
 <link rel="stylesheet" href="css/style.css"/>
 <link rel="shortcut icon" href="media/basket.png" type="image/x-icon">
 <script src="js/main.js"></script>
@@ -13,8 +13,7 @@
 <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script>
-  <script src="js/jquery.js"></script><!--conf bibliioteca jquery-->
+  crossorigin="anonymous"></script><!--conf bibliioteca jquery-->
 </head>
     <html>
         <body>
