--- a/login.html
+++ b/login.html
@@ -8,14 +8,35 @@
     <title>Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel=stylesheet href="css/main.css"/>
-    <script src="js/login.js"></script>
+
+    <script src="https://accounts.google.com/gsi/client" async defer></script> <!--conf login com o google-->
+    <script src="https://unpkg.com/jwt-decode/build/jwd-decode.js"></script>
+    <script>
+        function handleCredentialResponse(response) {
+            const data = jwd_decode(response.credential)
+            console.log(data)
+            window.location="index.html"
+        }
+
+        window.onload = function () {
+          google.accounts.id.initialize({
+            client_id: "176624051442-l4r924990sjj2avqiblgpnan2d3dvqbu.apps.googleusercontent.com",
+            callback: handleCredentialResponse
+          });
+          google.accounts.id.renderButton(
+            document.getElementById("buttonDiv"),
+            { theme: "outline", size: "large" }  // customization attributes
+          );
+          google.accounts.id.prompt(); // also display the One Tap dialog
+        }
+    </script>
 </head>
     <html>
         <body id="bg">
             <div id="loginBox">
                 <i class="fab fa-adn"></i>
                 <input class="user" type="email" name="emailUser" placeholder="example@gmail.com">
-                <input class="user" type="password" name="passUser" placeholder="password">
+                <input class="user" type="password" name="passUser" placeholder="password"><div id="buttonDiv"></div> 
                 <input onclick="submit()" type="submit" value="Enviar"><br>
                 <p><a href="#">Esqueceu sua senha?</a></p>
                 <p>Não tem uma conta? <a href="#">Criar</a></p>
