--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <html>
         <body>
             <header>
-                <i onclick="login()" id="userIcon" class="fas fa-user"><label id="userName"><p id="given_name"></p></label></i>
+                <i onclick="login()" id="userIcon" class="fas fa-user"><p id="given_name"></p></i></p>
                 <lord-icon
                     src="https://cdn.lordicon.com/dnoiydox.json"
                     trigger="hover"
