--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
         <body>
             <header>
                 <i onclick="login()" id="userIcon" class="fas fa-user"><p id="given_name"></p></i></p>
-                <lord-icon
-                    src="https://cdn.lordicon.com/dnoiydox.json"
-                    trigger="hover"
-                    colors="primary:#3080e8,secondary:#4030e8"
-                    style="width:5rem;height:5rem">
-                </lord-icon><h1 id="nomeDoSite">Shoping.com</h1>
+                <div id="logoIcon">
+                    <lord-icon
+                        src="https://cdn.lordicon.com/dnoiydox.json"
+                        trigger="hover"
+                        colors="primary:#3080e8,secondary:#4030e8"
+                        style="width:5rem;height:5rem">
+                    </lord-icon>
+                </div><h1 id="nomeDoSite">Shoping.com</h1>
                 <div id="carrinho" onclick="openPurchases()">
                     <lord-icon
                         src="https://cdn.lordicon.com/slkvcfos.json"
