--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   crossorigin="anonymous"></script><!--conf bibliioteca jquery-->
 </head>
     <html>
-        <body>
+        <body onload="confItens()">
             <header>
                 <i onclick="login()" id="userIcon" class="fas fa-user"><p id="given_name"></p></i></p>
                 <div id="logoIcon">
@@ -46,5 +46,19 @@
                 <nav id="sideBar"><p onclick="closeSideBar()">X</p><a href="#">Home</a> <a href="#">Produtos</a> <a href="#">Novidades</a> <a href="#">Suporte</a></nav>
             </header>
                 <nav id="dskMenu"><details id="categorias"><summary>Categorias</summary><a href="#">Alface</a> <a href="#">Repolho roxo</a> <a href="#">Samambaias</a> <a href="#">Material escolar</a> <a href="#">Carros elétricos</a></details><a href="#">Destaques do dia</a> <a href="#">Ofertas</a> <a href="#">Fale conosco</a></nav>
+                <section id="produtos">
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto001">s</p>
+                    </div>
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto002"></p>
+                    </div>
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto003"></p>
+                    </div>
+                </section>
         </body>
     </html>
