--- a/login.html
+++ b/login.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel=stylesheet href="css/main.css"/>
 
-    <script src="js/login.js"></script>
+    <script src="js/login.js"></script> <!--código javascript sobre o login-->
     <script src="https://accounts.google.com/gsi/client" async defer></script> <!--conf login com o google-->
-    <script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
+    <script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script> <!--conf biblioteca utilizada para decodificar login com o google-->
 
 </head>
     <html>
@@ -19,7 +19,8 @@
             <div id="loginBox">
                 <i class="fab fa-adn"></i>
                 <input class="user" type="email" name="emailUser" placeholder="example@gmail.com">
-                <input class="user" type="password" name="passUser" placeholder="password"><div id="buttonDiv"></div> 
+                <input class="user" type="password" name="passUser" placeholder="password">
+                <div id="buttonDiv"></div>
                 <input onclick="submit()" type="submit" value="Enviar"><br>
                 <p><a href="#">Esqueceu sua senha?</a></p>
                 <p>Não tem uma conta? <a href="#">Criar</a></p>
