loja com login [andamento]

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <link rel="shortcut icon" href="media/basket.png" type="image/x-icon"> <!--favicon da página-->
 <script src="js/main.js"></script><!--importando script principal da pagina-->
 
+<script src="js/login.js"></script> <!--código javascript sobre o login-->
 <script src="https://accounts.google.com/gsi/client" async defer></script> <!--conf login com o google-->
-<script src="js/login.js"></script> <!--importando script do login para manter o login com o google-->
-<script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script> <!--biblioteca utilizada no script login-->
+<script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script> <!--conf biblioteca utilizada para decodificar login com o google-->
 
 <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script> <!--Configurando ícones-->
 <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script> <!--Conf ícones-->
@@ -21,6 +21,7 @@
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
   crossorigin="anonymous"></script><!--conf bibliioteca jquery-->
+
 </head>
     <html>
         <body onload="confItens()">
@@ -49,11 +50,23 @@
                 <section id="produtos">
                     <div class="item">
                         <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
-                        <p id="produto001">s</p>
+                        <p id="produto001"></p>
                     </div>
                     <div class="item">
                         <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
                         <p id="produto002"></p>
+                    </div>
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto003"></p>
+                    </div>
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto003"></p>
+                    </div>
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto003"></p>
                     </div>
                     <div class="item">
                         <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
