--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
                 <input onclick="submit()" type="submit" value="Enviar"><br>
                 <p><a href="#">Esqueceu sua senha?</a></p>
                 <p>Não tem uma conta? <a href="#">Criar</a></p>
+                <p id="given_name"></p>
             </div>
         </body>
     </html>
