loja virtual com login

--- a/login.html
+++ b/login.html
@@ -15,16 +15,17 @@
 
 </head>
     <html>
-        <body id="bg">
+        <body id="bg">               
             <div id="loginBox">
                 <i class="fab fa-adn"></i>
                 <input class="user" type="email" name="emailUser" placeholder="example@gmail.com">
                 <input class="user" type="password" name="passUser" placeholder="password">
-                <div id="buttonDiv"></div>
+                <div id="googleLogin">
+                    <div id="buttonDiv"></div>
+                </div>
                 <input onclick="submit()" type="submit" value="Enviar"><br>
                 <p><a href="#">Esqueceu sua senha?</a></p>
                 <p>Não tem uma conta? <a href="#">Criar</a></p>
-                <p id="given_name"></p>
             </div>
         </body>
     </html>
