--- a/index.html
+++ b/index.html
@@ -72,6 +72,30 @@
                         <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
                         <p id="produto006"></p>
                     </div>
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto007"></p>
+                    </div>
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto008"></p>
+                    </div>
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto009"></p>
+                    </div>
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto010"></p>
+                    </div>
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto011"></p>
+                    </div>
+                    <div class="item">
+                        <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+                        <p id="produto012"></p>
+                    </div>
                 </section>
         </body>
     </html>
