--- a/login.html
+++ b/login.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="theme-color" content="#dd7c3b"/><!--conf cor navegador: android-->
-    <meta name="apple-mobile-web-app-status-bar-style" content="#dd7c3b"/><!--conf cor navegador: ios-->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#dd7c3b" />
+    <!--conf cor navegador: android-->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#dd7c3b" />
+    <!--conf cor navegador: ios-->
     <title>Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <link rel=stylesheet href="css/main.css"/>
+    <link rel=stylesheet href="css/main.css" />
 
-    <script src="js/login.js"></script> <!--código javascript sobre o login-->
-    <script src="https://accounts.google.com/gsi/client" async defer></script> <!--conf login com o google-->
-    <script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script> <!--conf biblioteca utilizada para decodificar login com o google-->
+    <script src="js/login.js"></script>
+    <!--código javascript sobre o login-->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!--conf login com o google-->
+    <script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
+    <!--conf biblioteca utilizada para decodificar login com o google-->
 
 </head>
-    <html>
-        <body id="bg">               
-            <div id="loginBox">
-                <i class="fab fa-adn"></i>
-                <input class="user" type="email" name="emailUser" placeholder="example@gmail.com">
-                <input class="user" type="password" name="passUser" placeholder="password">
-                <div id="googleLogin">
-                    <div id="buttonDiv"></div>
-                </div>
-                <input onclick="submit()" type="submit" value="Enviar"><br>
-                <p><a href="#">Esqueceu sua senha?</a></p>
-                <p>Não tem uma conta? <a href="#">Criar</a></p>
-                <p id="given_name"></p>
-            </div>
-        </body>
-    </html>
+<html>
+
+<body id="bg">
+    <div id="loginBox">
+        <i class="fab fa-adn"></i>
+        <input class="user" type="email" name="emailUser" placeholder="example@gmail.com">
+        <input class="user" type="password" name="passUser" placeholder="password">
+        <div id="googleLogin">
+            <div id="buttonDiv"></div>
+        </div>
+        <input onclick="submit()" type="submit" value="Enviar"><br>
+        <p><a href="#">Esqueceu sua senha?</a></p>
+        <p>Não tem uma conta? <a href="#">Criar</a></p>
+        <p id="given_name"></p>
+    </div>
+</body>
+
+</html>
