--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         </details><a href="#">Destaques do dia</a> <a href="#">Ofertas</a> <a href="#">Fale conosco</a>
     </nav>
     <section id="produtos">
-        <div class="item">
+        <div onclick="compra()" class="item">
             <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
             <p id="produto001"></p>
         </div>
-        <div class="item">
+        <div onclick="compra()" class="item">
             <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
             <p id="produto002"></p>
         </div>
