--- a/login.html
+++ b/login.html
@@ -8,9 +8,12 @@
     <!--conf cor navegador: android-->
     <meta name="apple-mobile-web-app-status-bar-style" content="#dd7c3b" />
     <!--conf cor navegador: ios-->
+
     <title>Login</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <link rel=stylesheet href="css/main.css" />
+
+    <link rel=stylesheet href="css/login.css" />
 
     <script src="js/login.js"></script>
     <!--código javascript sobre o login-->
