loja de roupas com login

--- a/comprando.html
+++ b/comprando.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title id="tituloSite" 
-    onload="novoTitulo()">Shoping.com</title>
+    <title id="tituloSite" onload="novoTitulo()">Shoping.com</title>
 
     <link rel="stylesheet" href="css/comprando.css" />
 
@@ -20,7 +19,7 @@
     <header>
         <span id="voltar">
             <a href="index.html" href="">
-            <img src="https://img.icons8.com/color/48/000000/back--v2.png"/> </a>
+                <img src="https://img.icons8.com/color/48/000000/back--v2.png" /> </a>
         </span>
 
         <div id="menu" onclick="openSideBar()">
@@ -33,7 +32,9 @@
                 href="#">Suporte</a>
         </nav>
     </header>
-    <section id="imagem do produto"></section>
+    <div class="mostradorProdutos">
+        <div class="imgProduto"></div>
+    </div>
 </body>
 
 </html>
