--- a/index.html
+++ b/index.html
@@ -68,51 +68,51 @@
     </nav>
     <section id="produtos">
         <div onclick="compra()" class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+            <div class="imgProduto"></div>
             <p id="produto001"></p>
         </div>
         <div onclick="compra()" class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+            <div class="imgProduto"></div>
             <p id="produto002"></p>
         </div>
-        <div class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+        <div onclick="compra()" class="item">
+            <div class="imgProduto"></div>
             <p id="produto003"></p>
         </div>
-        <div class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+        <div onclick="compra()" class="item">
+            <div class="imgProduto"></div>
             <p id="produto004"></p>
         </div>
-        <div class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+        <div onclick="compra()" class="item">
+            <div class="imgProduto"></div>
             <p id="produto005"></p>
         </div>
-        <div class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+        <div onclick="compra()" class="item">
+            <div class="imgProduto"></div>
             <p id="produto006"></p>
         </div>
-        <div class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+        <div onclick="compra()" class="item">
+            <div class="imgProduto"></div>
             <p id="produto007"></p>
         </div>
-        <div class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+        <div onclick="compra()" class="item">
+            <div class="imgProduto"></div>
             <p id="produto008"></p>
         </div>
-        <div class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+        <div onclick="compra()" class="item">
+            <div class="imgProduto"></div>
             <p id="produto009"></p>
         </div>
-        <div class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+        <div onclick="compra()" class="item">
+            <div class="imgProduto"></div>
             <p id="produto010"></p>
         </div>
-        <div class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+        <div onclick="compra()" class="item">
+            <div class="imgProduto"></div>
             <p id="produto011"></p>
         </div>
-        <div class="item">
-            <img class="imgProduto" src="media/basket.png" alt="Produtos da loja">
+        <div onclick="compra()" class="item">
+            <div class="imgProduto"></div>
             <p id="produto012"></p>
         </div>
     </section>
