--- a/comprando.html
+++ b/comprando.html
@@ -56,7 +56,7 @@
     <div id="descricao">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas debitis deserunt tempora dolorem, quam aliquam adipisci repudiandae, voluptate, saepe minima modi possimus quia. Ipsam ea perferendis incidunt, ratione totam aliquid! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos dolores eaque corrupti voluptatibus odio deleniti cum ratione quibusdam. Nobis suscipit minus alias at commodi ducimus adipisci architecto incidunt libero rem.</p>
     </div>
-    <div id="comprar"><input type="button" value="Comprar"></div>
+    <div id="comprar">Comprar</div>
 </body>
 
 </html>
