--- a/index.html
+++ b/index.html
@@ -67,51 +67,51 @@
         </details><a href="#">Destaques do dia</a> <a href="#">Ofertas</a> <a href="#">Fale conosco</a>
     </nav>
     <section id="produtos">
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto001"></p>
         </div>
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto002"></p>
         </div>
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto003"></p>
         </div>
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto004"></p>
         </div>
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto005"></p>
         </div>
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto006"></p>
         </div>
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto007"></p>
         </div>
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto008"></p>
         </div>
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto009"></p>
         </div>
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto010"></p>
         </div>
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto011"></p>
         </div>
-        <div onclick="compra()" class="item">
+        <div onclick="produtoInfo()" class="item">
             <div class="imgProduto"></div>
             <p id="produto012"></p>
         </div>
