--- a/comprando.html
+++ b/comprando.html
@@ -70,9 +70,8 @@
         <div id="defQuantidade">
             <p>Defina a quantidade de encomendas</p>
             <input type="range" value="1" min="1" max="10" oninput="display.value=value" onchange="display.value=value">
-            <input type="text" id="display" value="0" readonly>
-            <input type="text" id="precoProduto" value="0">
-            <p id="maisDeUmProduto">Preço:</p>
+            <input type="text" id="display" value="1" readonly>
+            <p onclick="calcPreco()" id="maisDeUmProduto">Clique para ver o preço:</p>
         </div>
 </body>
 
