--- a/comprando.html
+++ b/comprando.html
@@ -72,6 +72,7 @@
             <input type="range" value="1" min="1" max="10" oninput="display.value=value" onchange="display.value=value">
             <input type="text" id="display" value="1" readonly>
             <p onclick="calcPreco()" id="maisDeUmProduto">Clique para ver o preço:</p>
+            <div id="corProdutos">Selecione a cor desejada: <div id="colorRed" onclick="selecionarCorRed()"></div><div id="colorBlue" onclick="selecionarCorBlue()"></div><div id="colorYellow" onclick="selecionarCorYellow()"></div><p id="info">Contate a possibilidade de escolher mais de uma cor com o vendedor</p></div>
             <div id="btnFinalizarCompra">Finalizar Compra</div>
         </div>
 </body>
